WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285733
[CoordinatedGraphics] Rendering broken when device scale factor changes
https://bugs.webkit.org/show_bug.cgi?id=285733
Summary
[CoordinatedGraphics] Rendering broken when device scale factor changes
Carlos Garcia Campos
Reported
2025-01-10 00:37:13 PST
This happens, for example, when a window is moved to a different screen with a different device scale factor. When contents scale changes in a layer, we now reset the backing store proxy, but we are not clearing the tiles and pending updates.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2025-01-10 00:39:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38833
EWS
Comment 2
2025-01-10 02:49:57 PST
Committed
288693@main
(2b57ccad5773): <
https://commits.webkit.org/288693@main
> Reviewed commits have been landed. Closing PR #38833 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-01-10 02:50:16 PST
<
rdar://problem/142677709
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug