[CoordinatedGraphics] Rendering broken when device scale factor changes https://bugs.webkit.org/show_bug.cgi?id=285733

Reviewed by Alejandro G. Castro.

This happens, for example, when a window is moved to a different screen
with a different device scale factor. When contents scale changes in a
layer, we now reset the backing store proxy, but we are not clearing the
tiles and pending updates.

* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedBackingStoreProxy.cpp:
(WebCore::CoordinatedBackingStoreProxy::setContentsScale):
* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayer.cpp:
(WebCore::CoordinatedPlatformLayer::setContentsScale):

Canonical link: https://commits.webkit.org/288693@main